syntax = "proto3";

package aflpp.v1;

message Server {
    string name = 1;
    string version = 2;
}

service AFLPP {
  rpc start (StartRequest) returns (StartResponse) {}
  rpc stop (StopRequest) returns (StopResponse) {}
}


message StartRequest {
  bytes binary = 1;
  string binary_args = 2;
  string aflpp_args = 3;
  repeated bytes seeds = 4;
}


message StartResponse {
  bool success = 1;
}


message StopRequest {}


message StopResponse {
  bool success = 1;
}
